	  resolution time must come from the system timer.
	* CONFIG_SYSTEM_UTC: Removed support for the UTC system timer.  It just
	  doesn't do enough to be worth the CPU cycles or the complexity.
	* CONFIG_SYSTEM_TIME16: Added support for an optional 64-bit system timer.
	* fs/fat/fs_fat32util.c: Add support for FAT date/time stamps; Enabled via
	  CONFIG_FS_FATTIME.
	* arch/arm/src/sam3u/sam3u_spi.c: Add an SPI driver for the AT91SAM3U.
	* drivers/input/ads7843e.c and include/nuttx/input/ads7843e.h: Add a
	  driver for the TI ADS7843E touchscreen controller.
	* fs/nxffs/nxffs_open.c:  Fix an error when a file is open for writing; since
	  the file will get deleted it is already exists, there must be a check if
	  there are other open references to the file.
	* arch/arm/src/stm32/stm32_sdio.c: Fixed an error where during SDHC
	  initialization interrupts were not being re-enabled.  Caused more subtle
	  errors than you would think.
	* arch/arm/src/stm32/stm32_i2c.c:  Fixed an error where I2C timeouts appeared
	  to be successful transfers.
	* configs/sim/nsh2: Add another simulated NSH configuration.  This one
	  supports X11 graphics, C++, and exercises graphic functions as built-in
	  commands.

6.11 2011-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/stm32/Make.defs:  Don't build stm32_rtc.c if CONFIG_RTC is not
	  selected.  Doing so will cause errors if other configuration dependencies
	  are not met.
	* configs/stm3210e-eval/src/up_lcd.c:  Color corrections for SPFD5408B LCD
	  do not work with R61580 LCD.
	* configs/pic32-starterkit: Beginning of a configuration for the Microchip
	  PIC32 Ethernet Starter Kit.  Hmmm.. I don't have a clue how to test this
	  with no serial port?!
	* lib/stdio/lib_fclose.c: fclose() always returns an error (EOF) when it
	  closes a read-only file.  This is because it calls flush() which will
	  fail on read-only files.  No harm is done other that a bad value is
	  returned.
